Fix navbar overflow

--- a/www/assets/css/api-fun.css
+++ b/www/assets/css/api-fun.css
@@ -5,7 +5,6 @@
 
 .api-fun-nav {
     background-color: #fff9db;
-    width: 100%;
     position: sticky;
     top: 0;
     padding-block: 0.35rem;
